# riley

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: file_sorter.py  report_creator.py  services.py
src/riley/: __main__.py  services.py
tests/: test_it.py
